--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about__bg {
-    background-image: url("/img/clouds\ \(1\).png");
+    background-image: url("img/clouds\ \(1\).png");
     background-repeat: no-repeat;
     background-position: center;
 }
