--- a/scss/blocks/_testimonicals.scss
+++ b/scss/blocks/_testimonicals.scss
@@ -58,7 +58,7 @@
         position: absolute;
         width: 62px;
         height: 62px;
-        background-image: url("/img/face.png");
+        background-image: url("img/face.png");
         left: 40%;
         bottom: -15%;
     }
