--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: Quicksand !important;
+    font-family: Quicksand, sans-serif !important;
 
     &.no-scroll {
         overflow: hidden;
