--- a/scss/blocks/_faq.scss
+++ b/scss/blocks/_faq.scss
@@ -68,8 +68,8 @@
     padding-left: 56px;
     padding-top: 16px;
     padding-right: 15px;
-    transform: translateY(-30%);
-    transition: max-height 0.25s ease-in, padding-bottom 0.25s ease-in, transform 0.25s ease-in;
+    transform: translateY(-10%);
+    transition: max-height 0.3s ease-out, padding-bottom 0.3s ease-out, transform 0.3s ease-out;
 
     max-height: 0px;
     visibility: hidden;
