--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -13,7 +13,7 @@
         position: absolute;
         inset: 0;
         width: min(100%, 120rem);
-        background-image: url("img/clouds.png");
+        background-image: url("/img/clouds.png");
         background-size: contain;
         background-repeat: no-repeat;
         background-position: left center;
