--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,6 @@
 @import "./blocks/_blog";
 @import "./blocks/_testimonicals";
 @import "./blocks/_faq";
+@import "./blocks/start";
+@import "./blocks/newsletter";
+@import "./blocks/footer";
