--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:wght@400;500;700&display=swap");
 body {
-  font-family: Quicksand !important;
+  font-family: Quicksand, sans-serif !important;
 }
 body.no-scroll {
   overflow: hidden;
@@ -88,6 +88,44 @@ a {
   .features__card::before {
     display: none;
   }
+  .footer__container-wrapper {
+    justify-content: space-between;
+  }
+  .footer__logo {
+    display: none;
+  }
+  .footer__left {
+    display: none !important;
+  }
+  .footer__right {
+    width: 100%;
+  }
+  .footer__right-wrapper {
+    justify-content: center;
+    gap: 34px;
+  }
+  .social__list {
+    gap: 64px !important;
+  }
+  .footer__copyright {
+    padding-left: 0 !important;
+    display: flex;
+    justify-content: center;
+  }
+}
+@media (max-width: 770px) {
+  .newsletter__content {
+    text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .faq__answer {
+    flex-direction: column;
+    gap: 15px !important;
+  }
+  .faq__answer.active {
+    max-height: 250px !important;
+  }
 }
 @media (max-width: 520px) {
   .header__logo {
@@ -154,6 +192,13 @@ a {
   .slider__arrow-right {
     top: 700px !important;
     right: 0 !important;
+  }
+  .start__title {
+    white-space: nowrap;
+    font-size: 34px !important;
+  }
+  .start__text {
+    font-size: 11px !important;
   }
 }
 article,
@@ -511,7 +556,7 @@ input {
   align-items: center;
 }
 
-.nav__list {
+.header.nav__list {
   display: flex;
   justify-content: flex-start;
   gap: 42px;
@@ -527,7 +572,7 @@ input {
   margin-right: clamp(22px, 3.5vw, 44px);
 }
 
-.nav__link {
+.header.nav__link {
   font-size: 12px;
   color: var(--color-gray);
   font-weight: 500;
@@ -535,7 +580,7 @@ input {
   text-shadow: 0px 0px 5px #e6e6e6;
   transition: var(--transition-duration);
 }
-.nav__link:hover {
+.header.nav__link:hover {
   color: var(--color-blue);
 }
 
@@ -1288,6 +1333,7 @@ input {
   overflow: hidden;
   padding-bottom: 70px;
   margin-top: -30px;
+  -webkit-mask: linear-gradient(90deg, rgba(0, 0, 0, 0), #000 0% 96%, rgba(0, 0, 0, 0));
 }
 
 .testimonicals__slider-container {
@@ -1406,7 +1452,7 @@ input {
 .faq__btn svg {
   margin-right: 18px;
   stroke: #b4b6bd;
-  transition: transform 0.2s;
+  transition: transform 0.25s;
 }
 
 .faq__answer {
@@ -1417,8 +1463,8 @@ input {
   padding-left: 56px;
   padding-top: 16px;
   padding-right: 15px;
-  transform: translateY(-30%);
-  transition: max-height 0.2s ease, padding-bottom 0.2s ease, transform 0.2s ease;
+  transform: translateY(-10%);
+  transition: max-height 0.3s ease-out, padding-bottom 0.3s ease-out, transform 0.3s ease-out;
   max-height: 0px;
   visibility: hidden;
   overflow: hidden;
@@ -1450,4 +1496,229 @@ input {
 }
 .answer__btn:hover {
   background-color: #d5e3ff;
+}
+
+.start {
+  position: relative;
+  background: linear-gradient(to top, #6888FF, #5E80FF);
+}
+.start::before {
+  content: "";
+  width: 100%;
+  position: absolute;
+  inset: 0;
+  background-image: url("/img/start_clouds.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.start__container {
+  display: flex;
+  justify-content: center;
+}
+
+.start__content {
+  position: relative;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 712px;
+  padding-top: 90px;
+}
+
+.start__subtitle {
+  color: #FFF;
+  font-size: 10px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 16px;
+}
+
+.start__title {
+  color: #FFF;
+  font-size: 48px;
+  font-weight: 300;
+  margin-bottom: 28px;
+}
+.start__title span {
+  font-weight: 500;
+}
+
+.start__text {
+  color: #FFF;
+  font-size: 15px;
+  letter-spacing: 0.45px;
+  margin-bottom: 28px;
+  text-align: center;
+}
+
+.start__btns {
+  display: flex;
+  padding-bottom: 91px;
+}
+
+.start__pricing {
+  border: 0;
+  color: #565F82;
+  font-size: 13px;
+  font-weight: 700;
+  background-color: #FFF;
+  padding: 13px 17px;
+  transition: background-color var(--transition-duration) ease;
+}
+.start__pricing:hover {
+  background-color: #ecf0ff;
+}
+
+.start__documentation {
+  border: 0.5px solid #C7D3FF;
+  background-color: transparent;
+  color: #C7D3FF;
+  font-size: 13px;
+  font-weight: 500;
+  transition: background-color var(--transition-duration) ease, color var(--transition-duration) ease;
+}
+.start__documentation:hover {
+  background-color: #8694cc;
+  color: #FFF;
+}
+
+.newsletter {
+  background-color: #FCFDFF;
+}
+
+.newsletter__container {
+  padding-top: 119px;
+}
+
+.newsletter__container-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: clamp(40px, 5vw, 80px);
+  flex-wrap: wrap;
+  padding-bottom: 119px;
+}
+
+.newsletter__content {
+  max-width: 330px;
+}
+
+.newsletter__title {
+  color: var(--color-dark-blue);
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 18px;
+}
+
+.newsletter__text {
+  color: var(--color-gray-alt);
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.newsletter_form {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.newsletter__email {
+  border: 0;
+  border-radius: 5px;
+  background-color: #EFEFF7;
+  padding-block: 21px;
+  padding-inline: 23px;
+  width: clamp(175px, 17.5vw, 280px);
+  color: #7A85AD;
+  font-size: 13px;
+  font-weight: 700;
+}
+.newsletter__email:focus {
+  outline: 1px solid #6779b8;
+}
+
+.newsletter__btn {
+  border: 0;
+  border-radius: 5px;
+  background-color: #4D6CE1;
+  padding: 21px 62px;
+  box-shadow: 0px 5px 15px rgba(116, 104, 255, 0.2);
+  white-space: nowrap;
+  transition: background-color var(--transition-duration) ease;
+  color: #FFF;
+  font-size: 13px;
+  font-weight: 700;
+}
+.newsletter__btn:hover {
+  background-color: #3e64ee;
+}
+
+.footer {
+  border-top: 1px solid #D8E3FE;
+}
+
+.footer__container-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 18px 15px;
+  margin-top: 93px;
+}
+
+.footer__logo {
+  padding-right: clamp(32px, 4.5vw, 72px);
+}
+
+.footer__left {
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  transition: transform 0.3s ease;
+}
+
+.footer.nav__list {
+  display: flex;
+  justify-content: flex-start;
+  gap: 42px;
+  border: 0;
+}
+
+.footer.nav__item {
+  border: 0;
+}
+
+.footer.nav__link {
+  font-size: 12px;
+  color: var(--color-gray);
+  font-weight: 500;
+  letter-spacing: 0.6px;
+  text-shadow: 0px 0px 5px #e6e6e6;
+  transition: var(--transition-duration);
+  border: 0;
+}
+.footer.nav__link:hover {
+  color: var(--color-blue);
+}
+
+.footer__right {
+  margin-left: auto;
+}
+
+.footer__right-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer__copyright {
+  color: #AEB8D0;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: capitalize;
+  padding-bottom: 93px;
+  padding-left: 99px;
 }/*# sourceMappingURL=style.css.map */
