--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:wght@400;500;700&display=swap");
 body {
   font-family: Quicksand, sans-serif !important;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 body.no-scroll {
   overflow: hidden;
